# selenium_learning

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: settings.py
lesson02/: chromedriver.py  geckodriver.py
lesson03/: navigation.py
lesson04/: data_and_validate.py
lesson05/: find_html_elements.py
lesson06/: interact_with_group_html_elements.py
lesson06/utils/: html_finders.py
lesson06/utils/models/: book.py  currency.py  price.py
lesson07/: using_xpath_correct.py
lesson08/: send_and_click_practice.py
lesson09/: chrome_settings.py  firefox_settings.py
lesson10/: download_file.py  upload_file.py
lesson11/: explicit_expectation.py
lesson2/: chromedriver.py  geckodriver.py
lesson3/: navigation.py
lesson4/: data_and_validate.py
lesson5/: find_html_elements.py
lesson6/: interact_with_group_html_elements.py
lesson6/helpers/: html_finders.py
lesson7/: using_xpath_correct.py
lesson8/: send_and_click_practice.py
lesson9/: chrome_settings.py  firefox_settings.py
payment/: authentication.py  base.py  main.py  utils.py
payment/config/: __init__.py  config.example.yaml  user_profile.py
payment/pages/: authentication.py  base.py  exceptions.py  gas_payment.py  home_page.py  index.py  water_report.py
payment/pages_past/: authentication.py  base.py  gas_payment.py  water_report.py
payment/web_elements/: base.py  button.py  exceptions.py  input.py  item.py
requirements/: dev_requirements.txt  prod_requirements.txt
traingin_selenium/: automatization_of_payment.py
(+5 files in other folders)
