[tool.poetry]
name = "selenium-learning"
version = "0.1.0"
description = ""
authors = ["Deyvidas <devidbanyavichyus@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
autoflake = "^2.2.1"
mypy = "^1.8.0"


[tool.poetry.group.test.dependencies]


[tool.poetry.group.prod.dependencies]
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"
pydantic = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
